src/index.css
@import url("https://fonts.googleapis.com/css2?family=Nunito&family=Source+Serif+Pro&family=Staatliches&family=Saira&family=Saira+Condensed&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  scroll-behavior: smooth;
}

h1 {
  font-family: "Staatliches", cursive;
  font-size: 3rem;
  color: honeydew;
  text-align: center;
}

h2 {
  font-family: "Saira", sans-serif;
  font-size: 1.5rem;
  color: honeydew;
  text-align: left;
}

p {
  font-family: "Saira", serif;
  font-size: 1.35rem;
  color: #cacaca;
  text-align: center;
}

#home {
  height: 100vh;
  width: 100vw;
  background: url(./assets/BG.png) no-repeat center center;
  background-size: cover;
}

#nav {
  display: flex;
  flex-direction: column;
  top: 5vh;
  height: 15vh;
  width: 100vw;
  justify-content: center;
  align-items: center;
  padding: 0 7.5vw;
  color: honeydew;
}

.item {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 3rem;
}

.item-wrapper {
  width: 100%;
}

.item-container > img {
  width: 100%;
}

button {
  padding: 0.35rem;
  text-transform: capitalize;
  font-family: "Saira", serif;
  min-width: 5rem;
  width: max-content;
  color: #696969;
  border: 2px solid #696969;
  border-radius: 1rem;
  transition: 0.3s ease-in-out;
}

button:hover {
  background: honeydew;
  border: 2px solid honeydew;
  color: #1b1b1b;
}

button:focus {
  color: honeydew;
  border: 2px solid honeydew;
}

.button-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(6rem, 1fr));
  grid-gap: 1rem;
}

.tt {
  position: relative;
}

.tt::before,
.tt::after {
  --scale: 0;
  --arrow-size: 7px;
  --tooltip-color: honeydew;

  position: absolute;
  top: -0.25rem;
  left: 50%;
  transform: translateX(-50%) translateY(var(--translate-y, 0))
    scale(var(--scale));
  transform-origin: bottom center;
  transition: 100ms transform;
}

.tt::before {
  --translate-y: calc(-100% - var(--arrow-size));
  padding: 0.5rem;
  content: attr(data-tt);
  color: #1b1b1b;
  text-align: center;
  height: auto;
  width: max-content;
  max-width: 35vw;
  background: var(--tooltip-color);
  border-radius: 0.3rem;
  font-size: 1rem;
  font-family: "Saira";
}

.tt:hover::before,
.tt:hover::after {
  --scale: 1;
}

.tt::after {
  --translate-y: calc(-1 * var(--arrow-size));
  content: "";
  border: var(--arrow-size) solid transparent;
  border-top-color: var(--tooltip-color);
  transform-origin: top center;
}

.ttr {
  position: relative;
}

.ttr::before,
.ttr::after {
  --scale: 0;
  --arrow-size: 7px;
  --tooltip-color: honeydew;

  position: absolute;
  top: 50%;
  right: -0.25rem;
  transform: translateX(var(--translate-x)) translateY(-50%) scale(var(--scale));
  transform-origin: left center;
  transition: 300ms transform;
}

.ttr::before {
  --translate-x: calc(100% + var(--arrow-size));
  padding: 0.5rem;
  content: attr(data-tt);
  color: #1b1b1b;
  text-align: center;
  height: auto;
  width: max-content;
  max-width: 35vw;
  background: var(--tooltip-color);
  border-radius: 0.3rem;
  font-size: 1rem;
  font-family: "Saira";
}

.ttr:hover::before,
.ttr:hover::after {
  --scale: 1;
}

.ttr::after {
  --translate-x: calc(1 * var(--arrow-size));
  content: "";
  border: var(--arrow-size) solid transparent;
  border-right-color: var(--tooltip-color);
  transform-origin: right center;
}

.focus {
  transition: all 0.3s ease-in-out;
  opacity: 0.15;
}

.spin {
  animation: spin 8s linear infinite;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(-360deg);
  }
}

